--- a/StriveMammoth/test-output/emailable-report.html
+++ b/StriveMammoth/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,004</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">115,236</td><td>Sanity</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.strivemammoth.testcases.ClientSearch_TestCase</td><td><a href="#m0">clientsearch</a></td><td rowspan="1">1675320963062</td><td rowspan="1">12</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.strivemammoth.testcases.LoginPage_Testcase</td><td><a href="#m0">Login</a></td><td rowspan="1">1677672416707</td><td rowspan="1">21695</td></tr><tr class="passedodd"><td rowspan="1">com.strivemammoth.testcases.WashPage_TestCases</td><td><a href="#m1">AddWash</a></td><td rowspan="1">1677672347719</td><td rowspan="1">41450</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.strivemammoth.testcases.ClientSearch_TestCase#clientsearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.strivemammoth.testcases.LoginPage_Testcase#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.strivemammoth.testcases.WashPage_TestCases#AddWash</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
