--- a/StriveMammoth/test-output/old/Suite/methods.html
+++ b/StriveMammoth/test-output/old/Suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6be399">  <td>23/02/02 12:25:54</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>23/02/02 12:25:55</td>   <td>252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ClientSearch_TestCase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>23/02/02 12:26:03</td>   <td>8206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClientSearch_TestCase.clientsearch()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">clientsearch</td> 
-  <td>main@503642634</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>23/02/02 12:26:03</td>   <td>8226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClientSearch_TestCase.close()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
-<tr bgcolor="6be399">  <td>23/02/02 12:26:03</td>   <td>8282</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&lt;&lt;endextent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
+<tr bgcolor="ef9480">  <td>23/03/01 17:35:23</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@37d4349f]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/03/01 17:35:23</td>   <td>367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WashPage_TestCases.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@37d4349f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/03/01 17:35:47</td>   <td>24636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WashPage_TestCases.AddWash()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@37d4349f]">AddWash</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/03/01 17:36:29</td>   <td>66127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WashPage_TestCases.close()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@37d4349f]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/03/01 17:36:29</td>   <td>66347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_Testcase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@434a63ab]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/03/01 17:36:56</td>   <td>93624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_Testcase.Login()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@434a63ab]">Login</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/03/01 17:37:18</td>   <td>115328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_Testcase.close()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@434a63ab]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="ef9480">  <td>23/03/01 17:37:18</td>   <td>115603</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@37d4349f]">&lt;&lt;endextent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
 </table>
